--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,29 +1,37 @@
 .header {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 50px;
-    background-color: #4682b4;
-    display: flex;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 50px;
+  background-color: #4682b4;
+  display: flex;
+  align-items: center;
 }
 
 .container {
-    max-width: 97%;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  max-width: 97%;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .link {
-    text-decoration: none;
-    padding: 10px;
-    color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  color: #fff;
 }
 
 .link.active {
-    color: #ffffff33;
+  color: #ffffff33;
+}
+
+.toggleButton {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
